Added - Neural Recipe Fix, Electrolytic Diffuser, and some minor bugfixes.